# factorio-blueprint-optimizer

./: Cargo.toml  bigtest.txt  get-factorio-json.sh  output.txt  test.txt
data/: entity-data.json
src/: better_bp.rs  bp_model.rs  draw.rs  main.rs  pole_graph.rs  pole_windows.rs  position.rs  prototype_data.rs  rcid.rs
src/algorithms/: min_scored.rs  miner_lp.rs  mod.rs  pole_pretty_connections.rs
src/algorithms/pole_optimization/: mod.rs  set_cover_ilp.rs
src/bp_model/: mod.rs
src/pole_solver/: cbc_allow_partial.rs  connections.rs  mod.rs  set_cover_ilp.rs
test-data/: base8_out.txt  bigtest.txt_out  bigtest_out.txt  newbase7.txt  newbase7_out.txt
