workspace = { members = ["factorio-blueprint"] }
[package]
name = "factorio-opti-poles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
#factorio-blueprint = "0.3.0"
# use local version
factorio-blueprint = { path = "factorio-blueprint" }
good_lp = "1.8.1"
num-traits = "0.2.18"
rand = "0.8.5"
base64 = "0.22.1"
flate2 = "1.0.30"
serde_json = "1.0.116"
noisy_float = "~0.1"
itertools = "0.12.1"
