[package]
name = "factorio-opti-poles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
#factorio-blueprint = "0.3.0"
# use local version
factorio-blueprint = { path = "factorio-blueprint" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
noisy_float = "~0.1"
itertools = "0.13.0"
euclid = "0.22.9"
serde_with = "3.8.1"
petgraph = "0.6.5"
plotters = "0.3.5"
hashbrown = "0.14.5"
good_lp = { version = "1.8.1", features = ["highs", "coin_cbc"] }
log = { version = "0.4.21", features = ["release_max_level_debug"] }
num-traits = "0.2.19"
once_cell = "1.19.0"
rand = "0.9.0-alpha.1"
